# StarAgent

./: .env.example  .env.longcat.backup  .gitignore  BUGFIX_SUMMARY.md  CHANGELOG.md  EVAL.md  EVIDENCE_VERIFICATION_SUMMARY.md  EVIDENCE_VERIFICATION_TESTS.py  MEMORY_CONTINUITY_FIX_PLAN.md  OPENWEBUI_REAL_TEST_REPORT.md  README.md  RELEASE_NOTES.md  RUNBOOK.md  VERIFICATION_REPORT.md  docker-compose.yml  entry_points.md  feature.py  feature_report.md  forensic_scan.py  history_files.txt  package-lock.json  plan.md  pyproject.toml  requirements.txt  sqlite_investigation.py  test_app_components.py  test_cli_agent.py  test_cli_approval_continue.py  test_cli_basic.py  test_cli_task_result_output.py  test_client_path_resolution.py  test_docs.py  test_fastapi_concurrent.py  test_intake_json_dataset.py  test_json_array_extraction.py  test_mcp_client_layer.py  test_mcp_tools.py  test_mcp_transport_handshake.py  test_openwebui_helper_routing.py  test_research_dataset_plan.py  (+6 more)
app/: agent.py  approval.py  artifact_registry.py  benchmark_engine.py  blueprint.py  checkpoint.py  claim_graph.py  command_discovery.py  content_extractor.py  context_loader.py  dashboard_ui.py  database.py  docs_embeddings.py  docs_ingest.py  docs_search.py  docs_store.py  docs_verifier.py  document_processor.py  eval_harness.py  eval_result_parser.py  evidence_engine.py  example.py  executor.py  gate_engine.py  intake.py  issue_triage.py  llm_client.py  main.py  mcp_integration.py  memory.py  model_profiles.py  model_registry.py  model_router.py  models.py  multi_agent.py  planner.py  presets.py  (+37 more)
(+261 files in other folders)
